--- a/index.html
+++ b/index.html
@@ -43,8 +43,38 @@
     <input name="blog[id]" type="text" placeholder="id" required>
     <button type="submit">Submit</button>
   </form>
+
+
+  <h2>Create Comment</h2>
+  <form id="new-comment" class="comment-crud-form" data-action="create">
+    <input name="comment[text]" type="text" placeholder="text" required>
+    <button type="submit">Submit</button>
+  </form>
+  <h2>Index</h2>
+  <form id="index-comment" class="comment-crud-form" data-action="index">
+    <button type="submit">Submit</button>
+  </form>
+  <h2>Show</h2>
+  <form id="show-comment" class="comment-crud-form" data-action="show">
+    <input name="comment[id]" type="text" placeholder="id" required>
+    <button type="submit">Submit</button>
+  </form>
+  <h2>Update</h2>
+  <form id="update-comment" class="comment-crud-form" data-action="update">
+    <input name="comment[id]" type="text" placeholder="id" required>
+    <input name="comment[text]" type="text" placeholder="text" required>
+    <button type="submit">Submit</button>
+  </form>
+  <h2>Delete</h2>
+  <form id="delete-comment" class="comment-crud-form" data-action="delete">
+    <input name="comment[id]" type="text" placeholder="id" required>
+    <button type="submit">Submit</button>
+  </form>
   <section id="blog-content">
     <h2> Blog Posts</h2>
+  </section>
+  <section id="comment-content">
+    <h2> Comments</h2>
   </section>
 </body>
 
