Add in beginning handlebar functions

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <form id="sign-out-form">
     <input type="submit" value="Sign Out" class="button">
   </form>
+
   <h2>Create</h2>
   <form id="new-blog" class="blog-crud-form" data-action="create">
     <input name="blog[title]" type="text" placeholder="title" required>
@@ -68,7 +69,7 @@
   </form>
 
 
-  <h2>Create Comment</h2>
+  <!-- <h2>Create Comment</h2>
   <form id="new-comment" class="comment-crud-form" data-action="create">
     <input name="comment[text]" type="text" placeholder="text" required>
     <button type="submit">Submit</button>
@@ -92,7 +93,7 @@
   <form id="delete-comment" class="comment-crud-form" data-action="delete">
     <input name="comment[id]" type="text" placeholder="id" required>
     <button type="submit">Submit</button>
-  </form>
+  </form> -->
   <section id="blog-content">
     <h2> Blog Posts</h2>
   </section>
