update handlebars, crud comments/blog

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
   </form>
   <h2>Index</h2>
   <form id="index-blog" class="blog-crud-form" data-action="index">
-    <button type="submit">Submit</button>
+    <button type="submit">SHOW ALL</button>
   </form>
-  <h2>Show</h2>
+  <!-- <h2>Show</h2>
   <form id="show-blog" class="blog-crud-form" data-action="show">
     <input name="blog[id]" type="text" placeholder="id" required>
     <button type="submit">Submit</button>
-  </form>
-  <h2>Update</h2>
+  </form> -->
+  <!-- <h2>Update</h2>
   <form id="update-blog" class="blog-crud-form" data-action="update">
     <input name="blog[id]" type="text" placeholder="id" required>
     <input name="blog[title]" type="text" placeholder="title" required>
@@ -65,7 +65,7 @@
   <form id="delete-blog" class="blog-crud-form" data-action="delete">
     <input name="blog[id]" type="text" placeholder="id" required>
     <button type="submit">Submit</button>
-  </form>
+  </form> -->
 
 
   <h2>Create Comment</h2>
@@ -94,11 +94,9 @@
     <button type="submit">Submit</button>
   </form>
   <section id="blog-content">
-    <h2> Blog Posts</h2>
+    <h2>Blog Posts</h2>
   </section>
-  <section id="comment-content">
-    <h2> Comments</h2>
-  </section>
+
 </body>
 
 </html>
