add button collapse all blogs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- NAVBAR TITLE -->
     <span class="navbar-brand mb-0 h1 text-light">MDHS Blog</span>
 
+    <button id="collapse-all-blogs" class="btn btn-dark text-light">Open all Blogs</button>
+
     <!-- NAVBAR SIGN IN/UP MODAL SHOW BUTTONS -->
     <div class="ml-auto">
       <button id="sign-in-btn" class="pre-login btn btn-dark text-light" data-toggle="modal" data-target="#sign-in-modal">Sign In</button>
@@ -186,16 +188,14 @@
     <!-- CREATE BLOG MODAL END -->
   </div>
 
-  <h1 class="pt-5 text-center">Maryland HighSchool Blog</h1>
+  <h1 class="pt-5 mt-3 text-center">Maryland HighSchool Blog</h1>
   <h2 id="user-message" class="m-0"></h2>
 
   <!-- <form id="index-blog" class="blog-crud-form" data-action="index">
     <button type="submit">SHOW ALL</button>
   </form> -->
 
-  <section id="blog-content">
-    <h2>Blog Posts</h2>
-  </section>
+  <section id="blog-content"></section>
 
 </body>
 
