--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- NAVBAR CREATE BLOG MODAL SHOW BUTTON -->
-    <button id="create-log-btn" class="post-login btn btn-light mr-auto" data-toggle="modal" data-target="#create-blog-modal">Create Blog</button>
+    <button id="create-log-btn" class="post-login btn btn-light mr-auto" data-toggle="modal" data-target="#create-blog-modal">Write your own blog</button>
 
     <!-- NAVBAR CHANGE PASSWORD/SIGN OUT DROPDOWN BUTTONS -->
     <div class="dropdown post-login">
@@ -179,7 +179,7 @@
           </div>
 
           <div class="modal-footer">
-            <button class="btn btn-success" type="submit">Create a Blog</button>
+            <button class="btn btn-success" type="submit">Post your Blog</button>
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
           </div>
         </form>
