--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <!-- NAVBAR CREATE BLOG MODAL SHOW BUTTON -->
-    <button id="create-log-btn" class="post-login btn btn-light mr-auto" data-toggle="modal" data-target="#create-blog-modal">Write your own blog</button>
+    <button id="create-log-btn" class="post-login btn btn-light mx-2 ml-auto" data-toggle="modal" data-target="#create-blog-modal">Write your own blog</button>
 
     <!-- NAVBAR CHANGE PASSWORD/SIGN OUT DROPDOWN BUTTONS -->
     <div class="dropdown post-login">
@@ -122,8 +122,8 @@
         <!-- CHANGE PASSWORD FORM -->
         <form id="change-password-form">
           <div class="modal-body">
-            <input name="passwords[old]" required type="password" placeholder="old password">
-            <input name="passwords[new]" required type="password" placeholder="new password">
+            <input class="form-control" name="passwords[old]" required type="password" placeholder="Old password">
+            <input class="form-control my-2" name="passwords[new]" required type="password" placeholder="New password">
             <div id="change-password-form-feedback" class="bg-danger text-light my-2"></div>
           </div>
           <div class="modal-footer">
@@ -156,8 +156,8 @@
             <p>Are you sure you want to sign out?</p>
           </div>
           <div class="modal-footer">
-            <input class="btn btn-danger" type="submit" value="Confirm Sign Out">
-            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+            <input class="btn btn-danger" type="submit" value="Yes">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">No</button>
           </div>
         </form>
 
@@ -185,7 +185,7 @@
 
           <div class="modal-footer">
             <button class="btn btn-success" type="submit">Post your Blog</button>
-            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
           </div>
         </form>
       </div>
