--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
         <!-- FAILURE MESSAGE BODY -->
         <div class="modal-body col-12">
-          <p class="my-1">The resource you have done an action on might have been deleted by its owner already. Please refresh the blog resources.</p>
+          <p class="my-1 text-justify">The resource you have done an action on might have been deleted by its owner already. Please refresh the blog resources.</p>
         </div>
 
         <div class="modal-footer">
