--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <form id="index-blog" class="blog-crud-form" data-action="index">
       <button class="btn btn-dark" type="submit">Reload Page</button>
     </form>
+    <button id="search-title-btn" class="btn btn-dark text-light mx-2" data-toggle="modal" data-target="#search-title-modal">Search By Title</button>
+    <button id="search-content-btn" class="btn btn-dark text-light mx-2" data-toggle="modal" data-target="#search-content-modal">Search By Content</button>
+    <button id="search-handle-btn" class="btn btn-dark text-light" data-toggle="modal" data-target="#search-handle-modal">Search By Handle</button>
 
     <!-- NAVBAR SIGN IN/UP MODAL SHOW BUTTONS -->
     <div class="ml-auto">
@@ -51,6 +54,81 @@
 
     <!-- NAVBAR END -->
   </nav>
+
+  <!-- SEARCH TITLE MODAL -->
+  <div id="search-title-modal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Search By Title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <!-- SEARCH TITLE FORM -->
+        <form id="search-blogs-title-form" class="search-blogs-title-form">
+          <div class="modal-body d-flex flex-column form-group">
+              <input name="blog[title]" required type="text" placeholder="Search Titles">
+          </div>
+          <div class="modal-footer">
+            <input class="btn btn-secondary" type="submit" value="Search">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- SEARCH TITLE MODAL END -->
+  </div>
+
+  <!-- SEARCH BODY MODAL -->
+  <div id="search-content-modal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-body">Search By Content</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <!-- SEARCH BODY FORM -->
+        <form id="search-blogs-body-form" class="search-blogs-body-form">
+          <div class="modal-body d-flex flex-column form-group">
+              <input name="blog[body]" required type="text" placeholder="Search By Content">
+          </div>
+          <div class="modal-footer">
+            <input class="btn btn-secondary" type="submit" value="Search">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- SEARCH BODY MODAL END -->
+  </div>
+
+  <!-- SEARCH HANDLE MODAL -->
+  <div id="search-handle-modal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Search By Handle</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <!-- SEARCH HANDLE FORM -->
+        <form id="search-blogs-handle-form" class="search-blogs-handle-form">
+          <div class="modal-body d-flex flex-column form-group">
+              <input name="blog[handle]" required type="text" placeholder="Search By Handle">
+          </div>
+          <div class="modal-footer">
+            <input class="btn btn-secondary" type="submit" value="Search">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- SEARCH HANDLE MODAL END -->
+  </div>
 
   <!-- SIGN IN MODAL -->
   <div id="sign-in-modal" class="modal fade" tabindex="-1" role="dialog">
@@ -222,7 +300,9 @@
   <h1 class="pt-5 mt-3 text-center">Maryland HighSchool Blog</h1>
   <h2 id="user-message" class="mx-5 my-0"></h2>
 
-  <section id="blog-content"></section>
+  <div id="blog-content"></div>
+
+  <div id="blog-search-content"></div>
 
 </body>
 
