update form field texts

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         <form id="sign-in-form">
           <div class="modal-body d-flex flex-column form-group">
             <label for="">Email</label>
-            <input class="form-control my-1" name="credentials[email]" required type="email" placeholder="Enter Here">
+            <input class="form-control my-1" name="credentials[email]" required type="email" placeholder="Enter Email Here">
             <label for="">Password</label>
-            <input class="form-control my-1" name="credentials[password]" required type="password" placeholder="Enter Here">
+            <input class="form-control my-1" name="credentials[password]" required type="password" placeholder="Enter Password Here">
             <div id="sign-in-form-feedback" class="bg-danger text-light my-2"></div>
           </div>
           <div class="modal-footer">
@@ -146,13 +146,13 @@
         <form id="sign-up-form">
           <div class="modal-body d-flex flex-column form-group">
             <label for="">Email</label>
-            <input class="form-control my-1" name="credentials[email]" required type="email" placeholder="Enter Here">
+            <input class="form-control my-1" name="credentials[email]" required type="email" placeholder="Enter Email Here">
             <label for="">Handle</label>
-            <input class="form-control my-1" name="credentials[handle]" required type="text" placeholder="Enter Here">
+            <input class="form-control my-1" name="credentials[handle]" required type="text" placeholder="Enter Handle Here">
             <label for="">Password</label>
-            <input class="form-control my-1" name="credentials[password]" required type="password" placeholder="Enter Here">
+            <input class="form-control my-1" name="credentials[password]" required type="password" placeholder="Enter Password Here">
             <label for="">Password Confirmation</label>
-            <input class="form-control my-1" name="credentials[password_confirmation]" required type="password" placeholder="Enter Here">
+            <input class="form-control my-1" name="credentials[password_confirmation]" required type="password" placeholder="Confirm Password Here">
             <div id="sign-up-form-feedback" class="bg-danger text-light my-2"></div>
           </div>
           <div class="modal-footer">
