--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <button id="sign-up-btn" class="pre-login btn btn-dark text-light mx-1" data-toggle="modal" data-target="#sign-up-modal">Sign Up</button>
 
     <!-- NAVBAR CREATE BLOG MODAL SHOW BUTTON -->
-    <button id="create-log-btn" class="post-login btn btn-light mx-2 ml-auto" data-toggle="modal" data-target="#create-blog-modal">Write your own blog</button>
+    <button id="create-log-btn" class="post-login btn btn-outline-light mx-2 ml-auto" data-toggle="modal" data-target="#create-blog-modal">Write your own blog</button>
 
     <!-- NAVBAR CHANGE PASSWORD/SIGN OUT DROPDOWN BUTTONS -->
     <div class="dropdown post-login">
